# Fuzzy-Logic

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  report.tex  report.tex~
assets/: automatic-pilot.fuzzy  leaveatip_cog.fuzzy  patatoide.shape  stylesheet.css  titanic_drag_coefficients.coef  titanic_lift_coefficients.coef  titanic_rudder_drag_coefficients.coef  titanic_rudder_lift_coefficients.coef  titanic_shape_points.point  titanic_shape_points.txt
lib/include/cppunit/: AdditionalMessage.h  Asserter.h  BriefTestProgressListener.h  CompilerOutputter.h  Exception.h  Message.h  Outputter.h  Portability.h  Protector.h  SourceLine.h  SynchronizedObject.h  Test.h  TestAssert.h  TestCaller.h  TestCase.h  TestComposite.h  TestFailure.h  TestFixture.h  TestLeaf.h  TestListener.h  TestPath.h  TestResult.h  TestResultCollector.h  TestRunner.h  TestSuccessListener.h  TestSuite.h  TextOutputter.h  TextTestProgressListener.h  TextTestResult.h  XmlOutputter.h  XmlOutputterHook.h  config-auto.h
src/: BinaryExpression.cpp  BinaryExpression.h  FuzzyLogic.h
src/core/: BinaryExpression.h  BinaryExpressionModel.h  BinaryShadowExpression.h  Expression.h  ExpressionFactory.h  NaryExpression.h  NaryExpressionModel.h  NaryShadowExpression.h  UnaryExpression.h  UnaryExpressionModel.h  UnaryShadowExpression.h  ValueModel.h
src/exception/: FuzzyException.cpp  FuzzyException.h  InvalidObjectConfigurationException.cpp  InvalidObjectConfigurationException.h  NotValueModelException.h  OperandNullException.cpp  OperatorNullException.cpp  PointAlreadyAddedShapeException.cpp  PointAlreadyAddedShapeException.h  ShapeSerializationException.cpp  ShapeSerializationException.h  TargetNullException.h
src/fuzzy/: Agg.h  AggMax.h  AggPlus.h  And.h  AndMin.h  AndMult.h  CogDefuzz.h  ExpressionFactory.h  FuzzyFactory.h  Is.h  IsBell.h  IsGaussian.h  IsRampLeft.h  IsRampRight.h  IsSigmoid.h  IsSingleton.h  IsTriangle.h  MamdaniDefuzz.h  Not.h  NotMinus.h  Or.h  OrMax.h  OrPlus.h  Shape.h  SugenoConclusion.h  SugenoDefuzz.h  SugenoThen.h  Then.h  ThenMin.h  ThenMult.h  deleteme  isTrapezoid.h
src/fuzzylogic/: fuzzylogic.h
src/fuzzylogic/core/: BinaryExpression.h  BinaryExpressionModel.h  BinaryShadowExpression.h  CoreObject.h  Expression.h  ExpressionFactory.h  NaryExpression.h  NaryExpressionModel.h  NaryShadowExpression.h  UnaryExpression.h  UnaryExpressionModel.h  UnaryShadowExpression.h  ValueModel.h
src/fuzzylogic/exception/: FuzzyException.cpp  FuzzyException.h  InterpreterException.cpp  InterpreterException.h  InvalidObjectConfigurationException.cpp  InvalidObjectConfigurationException.h  NotBinaryExpressionModelException.cpp  NotBinaryExpressionModelException.h  NotBinaryShadowExpressionException.cpp  NotBinaryShadowExpressionException.h  NotSugenoThenException.cpp  NotSugenoThenException.h  NotValueModelException.cpp  NotValueModelException.h  OperandNullException.cpp  OperandNullException.h  OperatorNullException.cpp  OperatorNullException.h  PointAlreadyAddedShapeException.cpp  PointAlreadyAddedShapeException.h  ShapeSerializationException.cpp  ShapeSerializationException.h  TargetNullException.cpp  TargetNullException.h
src/fuzzylogic/fuzzy/: Agg.h  AggMax.h  AggPlus.h  And.h  AndMin.h  AndMult.h  ApproximatelyEqual.h  CogDefuzz.h  Equal.h  FuzzyFactory.h  Is.h  IsBell.h  IsBornedTrapezoid.h  IsGaussian.h  IsParable.h  IsRampLeft.h  IsRampRight.h  IsRangeBell.h  IsShape.h  IsSigmoid.h  IsSingleton.h  IsTrapezoid.h  IsTriangle.h  MamdaniDefuzz.h  Not.h  NotMinus.h  NotMinus1.h  Or.h  OrMax.h  OrPlus.h  Shape.h  SugenoConclusion.h  SugenoDefuzz.h  SugenoThen.h  Then.h  ThenMin.h  ThenMult.h  isTrapezoid.h
src/fuzzylogic/interpreter/: AbstractInterpreter.h  FuzzyInterpreter.h
src/gui/: FuzzyMonitor.cpp  FuzzyMonitor.h
src/interpreter/: AbstractInterpreter.cpp  AbstractInterpreter.h  FuzzyInterpreter.cpp  FuzzyInterpreter.h
src/leaveatip/: LeaveATip.cpp  LeaveATip.h  LeaveAtip.cpp  LeaveAtip.h  main.cpp
src/titanic/: main.cpp
src/titanic/controller/: AbstractController.cpp  AbstractController.h  AutomaticPilotController.cpp  AutomaticPilotController.h  CheckBoxController.cpp  CheckBoxController.h  ControlGroup.cpp  ControlGroup.h  MenuController.cpp  MenuController.h  SliderController.cpp  TimeWizardController.cpp  TimeWizardController.h
src/titanic/model/: AlternativeMachine.cpp  AlternativeMachine.h  BlackBox.cpp  BlackBox.h  Engine.cpp  Engine.h  (+12 more)
test/: main.cpp
test/core/: BinaryExpressionModelTest.cpp  BinaryExpressionModelTest.h  NaryExpressionModelTest.cpp  NaryExpressionModelTest.h  NaryShadowExpressionTest.h  UnaryExpressionModelTest.h  ValueModelTest.cpp  ValueModelTest.h
test/fuzzy/: AggTest.cpp  AggTest.h  AndTest.cpp  AndTest.h  DefuzzTest.cpp  DefuzzTest.h  FuzzyFactoryTest.cpp  FuzzyFactoryTest.h  IsTest.cpp  IsTest.h  NotMinusTest.cpp  NotMinusTest.h  OrTest.cpp  OrTest.h  ShapeTest.cpp  ShapeTest.h  ThenTest.cpp  ThenTest.h
test/fuzzylogic/: main.cpp
test/leaveatip/: LeaveATipTest.cpp  LeaveATipTest.h  main.cpp
test/titanic/: PhysicObject2DTest.cpp  PhysicObject2DTest.h  main.cpp
titanic/: AbstractController.cpp  AbstractController.h  AutomaticPilotController.h  ButtonController.h  Controler.h  Model.h  View.cpp  View.h  main.cpp
titanic/controller/: AbstractController.cpp  AbstractController.h  AutomaticPilotController.cpp  AutomaticPilotController.h  ButtonController.cpp  ButtonController.h  CheckBoxController.cpp  CheckBoxController.h  ControlGroup.cpp  ControlGroup.h  MenuController.h  SliderController.cpp  SliderController.h  TimeWizardController.cpp  TimeWizardController.h
titanic/helper/: Helper.cpp  Helper.h
titanic/model/: AlternativeMachine.cpp  AlternativeMachine.h  BlackBox.cpp  BlackBox.h  Engine.cpp  Engine.h  Iceberg.cpp  Iceberg.h  LaserSensor.h  LasersSensor.h  LasersSensors.h  LowPressureTurbine.cpp  LowPressureTurbine.h  Model.cpp  Model.h  Object2D.cpp  Object2D.h  ObjectND.h  PhysicObject2D.cpp  PhysicObject2D.h  Rudder.cpp  Rudder.h  Titanic.cpp  Titanic.h
titanic/view/: Draftsman.cpp  Draftsman.h  View.cpp  View.h
(+54 files in other folders)
